--- a/index.html
+++ b/index.html
@@ -46,5 +46,9 @@
             <li>Datenbasierte Analysen</li>
         </ul>
     </main>
+    <footer>
+        <a href="https://www.linkedin.com/in/christopher-meil-8183b9124/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+        <a href="https://x.com/testlandblog" target="_blank" rel="noopener noreferrer">X</a>
+    </footer>
 </body>
 </html>
