--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             text-align: center;
             background-color: #f5f5f5;
         }
+        body.grid {
+            background-image: linear-gradient(#e5e5e5 1px, transparent 1px),
+                              linear-gradient(90deg, #e5e5e5 1px, transparent 1px);
+            background-size: 20px 20px;
+        }
         header {
             background-color: #333;
             color: #fff;
@@ -45,6 +50,12 @@
             <li>Social-Media-Kampagnen</li>
             <li>Datenbasierte Analysen</li>
         </ul>
+        <button id="toggle-bg">Hintergrund umschalten</button>
     </main>
+    <script>
+        document.getElementById('toggle-bg').addEventListener('click', function () {
+            document.body.classList.toggle('grid');
+        });
+    </script>
 </body>
 </html>
